tests/errors/semantics/lvalue_expected_on_lhs.odl
main :: () -> void  {
    1 = 2;
};